--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack && webpack-dev-server",
+    "start": "webpack && webpack-dev-server -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Prem",
